Fix margins and spacing

--- a/index.css
+++ b/index.css
@@ -11,6 +11,8 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 select {
@@ -50,17 +52,19 @@ img {
     font-weight:600;
     font-size: 40px;
     font-family: 'Press Start 2P', cursive;
-    border-radius:5px;
+    border-radius: 1rem;
     width:100%;
 }
 
 #main-question {
+    margin-left: 30px;
     font-size: 40px;
     font-family: 'Press Start 2P', cursive;
     color: white;
 }
 
 #beer-results-container {
+    margin-top: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     align-items: center;
@@ -71,7 +75,7 @@ img {
 .flip-card {
     background-color: transparent;
     width: 300px;
-    height: 400px;
+    height: 500px;
     perspective: 1000px; /* 3D effect */
   }
   
@@ -104,7 +108,7 @@ img {
     background-color: #bbb;
     color: black;
     font-family: 'Permanent Marker', cursive;
-    font-size: 10px;
+    font-size: 15px;
   }
   
   /* Style the back side */
@@ -112,7 +116,7 @@ img {
     background-color: #b53fa7;
     color: white;
     transform: rotateY(180deg);
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Tajawal', sans-serif;
   }
 
   #food-pairing-list {
